# furia

./: .gitignore  Cargo.toml  README.md
data/: centos-6.5.torrent  ubuntu-22.04.3-live-server-amd64.iso.torrent
src/: download.rs  main.rs  messages.rs  parse_torrent.rs  peers.rs  tracker.rs
