[package]
name = "furia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
hex = "0.4.3"
num-derive = "0.4.1"
num-traits = "0.2.17"
percent-encoding = "2.3.1"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.14"
serde_json = "1.0.111"
sha1 = "0.10.6"
tokio = { version = "1.35.1", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
panic = "abort"
